<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="my_story">My Story</string>
    <string name="logo_desc">Application Logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sandi">Password</string>
    <string name="error_text">Password must have more or atleast 8 character</string>
    <string name="no_account_text">No account, yet? let\'s signup!</string>
    <string name="register_info">Please fill in your data, okay!</string>
    <string name="register">Signup</string>
    <string name="name">Name</string>
    <string name="logo_registrasi">Signup Logo</string>
    <string name="add_story">Add a Story</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="description_fill_error">Please, fill the blank field!</string>
    <string name="list_stories">List Of Stories</string>
    <string name="story_detail">The Story Detail</string>
    <string name="change_lang">Change Language</string>
    <string name="login_info">Let\'s sign in first, before reading an interesting story!</string>
    <string name="email_invalid">The email is not valid!</string>
    <string name="name_blank">The name must not blank!</string>
    <string name="login_error">Please, fill in the email and password!</string>
    <string name="the_picture_that_will_be_added">The Picture that will be added</string>
    <string name="no_location_found">No Location Found</string>
    <string name="address">Address</string>
    <string name="stories">Stories</string>
    <string name="Map">Map</string>
    <string name="style_parsing_failed">Style parsing failed</string>
    <string name="users_stories">%1$s\'s Stories</string>
    <string name="post">post</string>
    <string name="stories_updated_to_map">Stories with Location Added To Map</string>
    <string name="data_is_null">Data not found</string>
    <string name="retry">retry</string>
    <string name="connection_lost_info">Connection Lost</string>
    <string name="internet_detected_info">Internet connection detected, refreshing page..</string>
    <string name="auto_detect_used">Auto detect location used</string>
    <string name="auto_detect_is_not_used">Auto detect location is not used</string>
    <string name="location_is_not_permitted">Can\'t access location, permissions is not granted</string>
    <string name="about">About</string>
</resources>