<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_list">
    <fragment
        android:id="@+id/nav_list"
        android:name="com.lajar.mystoryapp.fragment.ListFragment"
        android:label="@string/stories"
        tools:layout="@layout/fragment_list"/>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.lajar.mystoryapp.fragment.MapFragment"
        android:label="@string/Map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.lajar.mystoryapp.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>

</navigation>