<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".AddActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/the_picture_that_will_be_added"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toBottomOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="16dp"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white_min30"
            app:layout_constraintEnd_toStartOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <Button
            android:id="@+id/btn_add_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="16dp"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white_min30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <EditText
            android:id="@+id/ed_add_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/et_add_bg"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top|start"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:padding="16dp"
            android:textColor="@color/navi"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_camera" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_auto_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ed_add_description"
            app:layout_constraintStart_toEndOf="@id/ed_add_location"
            app:layout_constraintTop_toBottomOf="@id/btn_add_gallery"
            />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/et_add_bg"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top|start"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="16dp"
            android:textColor="@color/navi"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_location" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/pb_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>